--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Omok for AI competition",
   "main": "index.js",
   "scripts": {
+    "build-server": "",
+    "build-client": "webpack",
+    "build": "npm run build-server && npm run build-client",
+    "start": "npm run build && set DEBUG=* && ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,10 +23,15 @@
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/pixi.js": "^5.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.1.1",
+    "ts-loader": "^8.0.4",
     "ts-node": "^9.0.0",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "debug": "^4.2.0",
     "pixi.js": "^5.3.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
