--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "npm run build && set DEBUG=* && ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:client": "webpack-dev-server --port 8080",
-    "watch:server": "nodemon --exec ts-node src/server.ts"
+    "watch:server": "nodemon --exec ts-node src/server.ts",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -27,8 +29,11 @@
     "@types/pixi.js": "^5.0.0",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
+    "eslint": "^7.10.0",
     "nodemon": "^2.0.4",
     "ts-loader": "^8.0.4",
     "ts-node": "^9.0.0",
