--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pixi.js": "^5.3.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "webfontloader": "^1.6.28"
   }
 }
