--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "debug": "^4.2.0",
+    "pixi-filters": "^3.1.1",
     "pixi.js": "^5.3.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
